<resources>
    <!--General-->
    <string name="app_name">Business Pit Scouting</string>
    <string name="content_desc">content desc</string>
    <string name="default_type">Type Here…</string>
    <string name="submit">Submit</string>
    <string name="submit_data">Are You Sure?</string>
    <string name="scouting_header">Scouting</string>

    <!--Start Page-->
    <string name="main_header_top">Business</string>
    <string name="main_header_bot">Pit Scouting</string>
    <string name="name">Scouter\'\s Name:</string>
    <string name="team_num">Team Number:</string>
    <string name="start_scouting">Start Scouting</string>

    <!--Questions-->
    <string name="q_1">How do you split up or assign roles?</string>
    <string name="q_2">Do you have assigned leads? If so what are they?</string>
    <string name="q_3">Do you have a video production team? If so what editing software do you use?</string>
    <string name="q_4">What are your main ways of gaining sponsors?</string>
    <string name="q_5">Do you have fundraisers? If so what are they?</string>
    <string name="q_6">What do you do for team sustainability?</string>
    <string name="q_7">What are you currently doing for imagery? Is it team specific or season specific?</string>
    <string name="q_8">How do you gain and/or maintain mentors?</string>
    <string name="q_9">Do you host any events or projects during offseason/summer?</string>
    <string name="q_10">What is your main way of gaining and keeping new members?</string>

    <!--Team numbers-->
    <string-array name="team_numbers">
        <item>11</item>
        <item>56</item>
        <item>75</item>
        <item>102</item>
        <item>103</item>
        <item>219</item>
        <item>222</item>
        <item>223</item>
        <item>272</item>
        <item>293</item>
        <item>316</item>
        <item>321</item>
        <item>341</item>
        <item>365</item>
        <item>427</item>
        <item>484</item>
        <item>555</item>
        <item>714</item>
        <item>834</item>
        <item>1089</item>
        <item>1168</item>
        <item>1218</item>
        <item>1257</item>
        <item>1279</item>
        <item>1391</item>
        <item>1403</item>
        <item>1640</item>
        <item>1676</item>
        <item>1807</item>
        <item>1811</item>
        <item>1923</item>
        <item>2191</item>
        <item>2495</item>
        <item>2539</item>
        <item>2590</item>
        <item>2607</item>
        <item>2720</item>
        <item>2722</item>
        <item>3142</item>
        <item>3314</item>
        <item>3637</item>
        <item>4285</item>
        <item>4342</item>
        <item>4361</item>
        <item>4573</item>
        <item>5181</item>
        <item>5401</item>
        <item>5438</item>
        <item>5438</item>
        <item>5684</item>
        <item>5895</item>
        <item>5992</item>
        <item>6226</item>
        <item>6921</item>
        <item>7045</item>
        <item>7110</item>
        <item>7414</item>
        <item>8513</item>
        <item>9015</item>
        <item>9027</item>
        <item>9094</item>
    </string-array>

</resources>