<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/lightBlue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/scouting_header"
                style="@style/header_text_dark"/>
            <ImageView
                android:layout_width="267dp"
                android:layout_height="5dp"
                android:background="@drawable/dotted_line"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/content_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_1"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_2"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_3"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_4"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_5"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_6"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_7"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_8"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_9"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q9"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/q_10"
                    style="@style/info_input_text"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/q10"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:hint="@string/default_type"
                    android:background="@drawable/dropdown_background"
                    android:layout_margin="10dp"
                    style="@style/info_input_type"/>
            </LinearLayout>

            <TextView
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/box_background_blue"
                android:text="@string/submit"
                android:padding="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.8"
                style="@style/header_text_light"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmFrame"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/box_background_grey"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
            android:weightSum="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/submit_data"
                android:layout_weight="2"
                style="@style/info_input_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:weightSum="2">
                <ImageButton
                    android:contentDescription="@string/content_desc"
                    android:id="@+id/yesButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    style="@style/src_buttons"
                    android:src="@drawable/submit_yes_button"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:contentDescription="@string/content_desc"
                    android:id="@+id/noButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    style="@style/src_buttons"
                    android:src="@drawable/submit_no_button"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>